fixing: text-wrap issues

--- a/assets/styles/contato.css
+++ b/assets/styles/contato.css
@@ -40,7 +40,6 @@ h2{
 
 .paragrafo{
     font-family: var(--fonteprincipal);
-    text-wrap: wrap;
     width: 32em;
 }
 
